# TECA

./: .gitattributes  .gitignore  .gitmodules  .install-linux-deps.sh  .install-osx-deps.sh  .readthedocs.yaml  .readthedocs.yml  .travis.yml  CMakeLists.txt  CTestConfig.cmake  CTestCustom.cmake.in  LICENSE  LICENSE.md  MANIFEST.in  README.md  paper.bib  paper.md  setup.py  teca.py  teca_algorithm.cxx  teca_algorithm.h  teca_algorithm_executive.h  teca_algorithm_executive_fwd.h  teca_algorithm_fwd.h  teca_algorithm_output_port.h  teca_array_collection.cxx  teca_array_collection.h  teca_binary_stream.cxx  teca_binary_stream.h  teca_cartesian_mesh.cxx  teca_cartesian_mesh.h  teca_cf_reader.cxx  teca_cf_reader.h  teca_common.h  teca_config.h.in  teca_dataset.h  teca_dataset_fwd.h  teca_file_util.cxx  teca_file_util.h  teca_mesh.cxx  (+22 more)
alg/: CMakeLists.txt  gfdl_spline.f90.in  gfdl_tc.h  gfdl_tc_candidates.cxx  gfdl_tc_candidates.f90.in  gfdl_tc_candidates.h  gfdl_tc_trajectory.cxx  gfdl_tc_trajectory.f90.in  gfdl_tc_trajectory.h  gfdl_tc_trajectory_util.f90  gfdl_trajectory.f90  gfdl_trajectory.h  gfdl_trajectory_tools.f90  gfdl_trajectory_util.f90  teca_2d_component_area.cxx  teca_2d_component_area.h  teca_apply_binary_mask.cxx  teca_apply_binary_mask.h  teca_apply_tempest_remap.cxx  teca_apply_tempest_remap.h  teca_ar_detect.cxx  teca_ar_detect.h  teca_ar_rutz.py  teca_ar_sellers.py  teca_ar_shields_kiehl.py  teca_ar_template.py  teca_bayesian_ar_detect.cxx  teca_bayesian_ar_detect.h  teca_bayesian_ar_detect_parameters.cxx  teca_bayesian_ar_detect_parameters.h  teca_bayesian_ar_detector_parameters.h  teca_binary_segmentation.cxx  teca_binary_segmentation.h  teca_binary_segmentation_internals.cu  teca_binary_segmentation_internals.cxx  teca_binary_segmentation_internals.h  teca_cartesian_mesh_coordinate_transform.cxx  teca_cartesian_mesh_coordinate_transform.h  teca_cartesian_mesh_regrid.cxx  teca_cartesian_mesh_regrid.h  (+176 more)
apps/: CMakeLists.txt  teca_app_util.cxx  teca_app_util.h  teca_ar_detect.cpp  teca_ar_rutz.py  teca_ar_sellers.py  teca_ar_shields_kiehl.py  teca_ar_template_app.py  teca_bayesian_ar_detect.cpp  teca_bayesian_ar_detector_parameters.h  teca_cartesian_mesh_diff.cpp  teca_cf_restripe.cpp  teca_convert_table.in  teca_convert_table.py  teca_convert_table.py.in  teca_cpp_temporal_reduction.cpp  teca_dataset_metadata.in  teca_dataset_metadata.py  teca_dataset_metadata.py.in  teca_deeplab_ar_detect.in  teca_deeplabv3p_ar_detect.in  teca_detect_nodes.cpp  teca_event_filter.in  teca_event_filter.py  teca_integrated_vapor_transport.cpp  teca_integrated_water_vapor.cpp  teca_jet_detect.py  teca_lapse_rate.in  teca_metadata_probe.cpp  teca_potential_intensity.in  teca_profile_explorer.in  teca_python_temporal_reduction.in  teca_pytorch_deeplabv3p_ar_detect.in  teca_regional_moisture_flux.cpp  teca_spatial_reduction.cpp  teca_spectral_filter.in  teca_table_diff.cpp  teca_tc_detect.cpp  teca_tc_stats.in  teca_tc_stats.py  (+10 more)
core/: CMakeLists.txt  calcalcs.cxx  calcalcs.h  py_teca_buffer.i  py_teca_core.h  py_teca_core.i  teca_algorithm.cxx  teca_algorithm.h  teca_algorithm_executive.cxx  teca_algorithm_executive.h  teca_algorithm_executive_fwd.h  teca_algorithm_fwd.h  teca_algorithm_output_port.h  teca_allocator.h  teca_bad_cast.cxx  teca_bad_cast.h  teca_binary_stream.cxx  teca_binary_stream.h  teca_calcalcs.cxx  teca_calcalcs.h  teca_calendar.cxx  teca_calendar.h  teca_common.cxx  teca_common.h  teca_compiler.h  teca_core_init.cxx  teca_cpu_allocator.cxx  teca_cpu_allocator.h  teca_cpu_thread_pool.h  teca_cuda_mm_allocator.cu  teca_cuda_mm_allocator.cxx  teca_cuda_mm_allocator.h  teca_cuda_thread_pool.h  teca_cuda_util.cu  teca_cuda_util.h  teca_dataset.cxx  teca_dataset.h  teca_dataset_capture.cxx  teca_dataset_capture.h  teca_dataset_fwd.h  (+71 more)
data/: CMakeLists.txt  teca_arakawa_c_grid.cxx  teca_arakawa_c_grid.h  teca_array_attributes.cxx  teca_array_attributes.h  teca_array_collection.cxx  teca_array_collection.h  teca_array_collection_fwd.h  teca_calendar_util.cxx  teca_calendar_util.h  teca_cartesian_mesh.cxx  teca_cartesian_mesh.h  teca_cartesian_mesh_fwd.h  teca_coordinate_util.cxx  teca_coordinate_util.h  teca_curvilinear_mesh.cxx  teca_curvilinear_mesh.h  teca_database.cxx  teca_database.h  teca_database_fwd.h  teca_dataset_util.h  teca_mesh.cxx  teca_mesh.h  teca_mesh_fwd.h  teca_priority_queue.h  teca_py_data.cxx  teca_py_data.dep  teca_py_data.i  teca_py_data.py  teca_table.cxx  teca_table.h  teca_table_collection.cxx  teca_table_collection.h  teca_table_collection_fwd.h  teca_table_fwd.h  teca_uniform_cartesian_mesh.cxx  teca_uniform_cartesian_mesh.h  teca_uniform_cartesian_mesh_fwd.h  teca_workbook.cxx  teca_workbook.h  (+1 more)
io/: CMakeLists.txt  teca_array_collection_reader.cxx  teca_array_collection_reader.h  teca_cartesian_mesh_reader.cxx  teca_cartesian_mesh_reader.h  teca_cartesian_mesh_reader_factory.cxx  teca_cartesian_mesh_reader_factory.h  teca_cartesian_mesh_writer.cxx  teca_cartesian_mesh_writer.h  teca_cartesian_mesh_writer_factory.cxx  teca_cartesian_mesh_writer_factory.h  teca_cf_block_time_step_mapper.cxx  teca_cf_block_time_step_mapper.h  teca_cf_cartesian_mesh_writer.cxx  teca_cf_cartesian_mesh_writer.h  teca_cf_interval_time_step_mapper.cxx  teca_cf_interval_time_step_mapper.h  teca_cf_layout_manager.cxx  teca_cf_layout_manager.h  teca_cf_reader.cxx  teca_cf_reader.h  teca_cf_space_time_time_step_mapper.cxx  teca_cf_space_time_time_step_mapper.h  teca_cf_spatial_time_step_mapper.cxx  teca_cf_spatial_time_step_mapper.h  teca_cf_time_axis_data.cxx  teca_cf_time_axis_data.h  teca_cf_time_axis_data_reduce.cxx  teca_cf_time_axis_data_reduce.h  teca_cf_time_axis_reader.cxx  teca_cf_time_axis_reader.h  teca_cf_time_step_mapper.cxx  teca_cf_time_step_mapper.h  teca_cf_writer.cxx  teca_cf_writer.h  teca_csv_writer.cxx  teca_csv_writer.h  teca_file_util.cxx  teca_file_util.h  teca_multi_cf_reader.cxx  (+21 more)
paraview/: CMakeLists.txt  TECASMFilters.xml  TECASMReaders.xml  vtkTECACF2Reader.cxx  vtkTECACF2Reader.h  vtkTECATCCandidateReader.cxx  vtkTECATCCandidateReader.h  (+12 more)
(+431 files in other folders)
